Do section top spacing as padding not margin to avoid ugly gray line.
If an unfloated section is the first element in main using margin-top will cause
the body background (gray) to show and not white.

The body background is gray so that scroll bounce shows the right color for the
header and the footer.

section elements are not floated in narrower views so that tables within them
can be given overflow-x to scroll-in-place. Floated elements are out-of-flow
and thus cannot be given that treatment.

In other news, CSS is a bit too complicated.

--- a/decksite/static/css/pd.css
+++ b/decksite/static/css/pd.css
@@ -232,7 +232,8 @@ footer {
 
 section {
     float: left;
-    margin: 1rem 2.369rem 1rem 0;
+    margin: 0 2.369rem 1rem 0;
+    padding-top: 1rem;
 }
 
 /* Enable right-scroll-in-place to work by not floating things that might need right-scroll-in-place.
